# fisoa

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
app/: main.cpp
doc/: DataBaseConfig.txt  Design_doc_template_en.docx
docs/: DataBaseConfig.txt  Design_doc.docx
include/: CMakeLists.txt
include/model/: CustomerData.h  customer_data_access.h
include/utils/: database.h  database_path.h  logger.h
scripts/: update_submodules.sh
server/Include/server/: customer_data_access.h
src/: CMakeLists.txt  main.cpp
src/model/: CustomerData.cpp  customer_data_access.cpp
src/server/: main.cpp
src/utils/: database.cpp  database_path.cpp  logger.cpp
tests/: CMakeLists.txt  logger_test.cpp  test_logger.cpp
workflows/: cmake-build.yml
